[package]
name = "mural"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
image = "0.24.8"
ndarray = "0.15.6"
palette = "0.7.3"
svg = "0.14.0"

[[bin]]
name = "mural"
path = "main.rs"
